<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:fontFamily="@font/slackey"
        android:textStyle="bold"
        android:background="#03A0F4"
        android:summary="Språkinformasjon"
        android:title="@string/hovedTittelSpraak" >
        <ListPreference
            android:entries="@array/spraakValg"
            android:entryValues="@array/spraakVerdier"
            android:key="spraak"
            android:summary="@string/summarySpraak"
            android:title="@string/tittelSpraak" />
    </PreferenceCategory>
    <PreferenceCategory
        android:background="#03A0F4"
        android:summary="Spillinformasjon"
        android:title="@string/hovedTittelSpill" >
        <ListPreference
            android:entries="@array/spillStorrelse"
            android:entryValues="@array/spillStorrelseVerdier"
            android:key="spill"
            android:summary="@string/summarySpill"
            android:title="@string/tittelSpill" />
    </PreferenceCategory>
</PreferenceScreen>