<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/velkommen"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp" />

    <Button
        android:id="@+id/startspill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startspill"
        android:textSize="18sp" />

    <Button
        android:id="@+id/statistikk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statistikk"
        android:textSize="18sp" />

    <Button
        android:id="@+id/preferanser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferanser"
        android:textSize="18sp" />
</LinearLayout>